--- a/css/style.css
+++ b/css/style.css
@@ -275,8 +275,7 @@ button:hover {
 }
 
 .point {
-  display: block;
-  width: fit-content;
+  display: table;
   margin: 0 0 6px 0;
   padding: 5px 10px;
   font-size: 12px;
