--- a/css/style.css
+++ b/css/style.css
@@ -211,9 +211,21 @@ button:hover {
 
 .top-bg {
   margin-top: 100px;
-  background-image: url("../img/main-banner.png");
-  background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
+}
+
+.top-bg::after {
+  content:"";
+  background-image: url("../img/mac-top.png");
   background-size: cover;
+  background-repeat: no-repeat;
+  position: absolute;
+  top: 40px;
+  left: 55%;
+  width: 870px;
+  height: 453px;
+  filter: drop-shadow(0px 10px 20px rgba(56, 110, 108, 0.12));
 }
 
 .top-content {
@@ -994,6 +1006,10 @@ header {
 
   .top-bg {
     background-image: none;
+  }
+
+  .top-bg::after {
+    display: none;
   }
 
   .mac {
