overflow visible for button

--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ button:hover {
   border-radius: 4px;
   box-sizing: border-box;
   font-weight: 500;
+  overflow: visible;
 }
 
 .download-btn {
