--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,11 @@ a:hover {
   filter: opacity(70%);
 }
 
+a.disabled {
+  pointer-events: none;
+  cursor: default;
+}
+
 .mac {
   display: none;
 }
@@ -164,19 +169,17 @@ button:hover {
 
 .article img {
   border-radius: 0 0 10px 0;
+  box-shadow: 0px 10px 20px rgba(56, 110, 108, 0.12);
   transition: filter 0.3s;
+  overflow: hidden;
+}
+
+.article p {
+  font-weight: 900;
 }
 
 .article img:hover {
   filter: opacity(70%);
-}
-
-.article .date {
-  margin: 0;
-  font-size: 12px;
-  line-height: 18px;
-  font-weight: 400;
-  color: #768486;
 }
 
 .apply-btn::after {
@@ -408,6 +411,14 @@ button:hover {
   background-color: rgba(95, 187, 184, 0.8);
 }
 
+.promo h2 .span1 {
+  padding-right: 0;
+}
+
+.promo h2 .span2 {
+  padding-left: 0;
+}
+
 .flow-wrapper {
   margin-bottom: 100px;
 }
@@ -432,7 +443,6 @@ button:hover {
 
 .flow p {
   color: white;
-  white-space: pre-wrap;
 }
 
 .flow span {
@@ -638,7 +648,7 @@ footer {
 }
 
 .magazine-wrapper {
-  max-width: 812px;
+  width: 1100px;
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flex;
@@ -647,6 +657,7 @@ footer {
   justify-content: space-between;
   flex-wrap: wrap;
   z-index: 1;
+  margin: 0 auto;
 }
 
 .magazine-logo {
@@ -669,6 +680,28 @@ footer {
 .article {
   width: 220px;
   margin: 0 0 40px 0;
+}
+
+.coming-soon {
+  position: relative;
+}
+
+.coming-soon img {
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
+
+.coming-soon::after {
+  content: "";
+  display: block;
+  background-image: url("../img/cs.svg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  width: 50%;
+  height: 50%;
+  position: absolute;
+  top: -10px;
+  right: -10px;
 }
 
 .intro {
@@ -973,7 +1006,8 @@ header {
 @media screen and (min-width: 1680px) {
   .header-wrapper,
   .top-content,
-  .content-wrapper {
+  .content-wrapper,
+  .magazine-wrapper {
     width: 1440px;
   }
 
@@ -1018,10 +1052,6 @@ header {
     width: 400px;
   }
 
-  .magazine-wrapper {
-    max-width: 1066px;
-  }
-
   .article {
     width: 320px;
   }
@@ -1040,16 +1070,13 @@ header {
 
   .header-wrapper,
   .content-wrapper,
-  .challenges-inner {
+  .challenges-inner,
+  .magazine-wrapper {
     width: 920px;
   }
 
   .header-nav li:nth-child(n+2) {
     display: none;
-  }
-
-  .magazine-wrapper {
-    max-width: 920px;
   }
 
   .ie {
@@ -1115,6 +1142,14 @@ header {
     width: 300px;
   }
 
+  .promo h2 .span1 {
+    padding-right: 10px;
+  }
+
+  .promo h2 .span2 {
+    padding-left: 10px;
+  }
+
   .flow-img {
     width: 460px;
   }
@@ -1142,6 +1177,10 @@ header {
   .content-wrapper,
   .challenges-inner {
     width: 540px;
+  }
+
+  .magazine-wrapper {
+    width: 320px;
   }
 
   .challenges-inner {
@@ -1253,8 +1292,7 @@ header {
     text-align: center;
   }
 
-  .magazine-logo,
-  .article {
+  .magazine-logo {
     margin-left: auto;
     margin-right: auto;
   }
@@ -1291,7 +1329,8 @@ header {
 
   .header-wrapper,
   .content-wrapper,
-  .challenges-inner {
+  .challenges-inner,
+  .magazine-wrapper {
     width: 320px;
   }
 
